feat: create book entities, create update user password endpoint, generate and validate jwt token, create auth endpoint
