# internal/model/book.go
@@ -1,0 +1,12 @@
+package model
+
+import (
+	"time"
+)
+
+type Book struct {
+	ID        uint   `gorm:"primaryKey"`
+	Name      string `gorm:"not null"`
+	Author    string `gorm:"not null"`
+	CreatedAt time.Time
+}
