# internal/model/jwt.go
@@ -1,0 +1,12 @@
+package model
+
+import "github.com/golang-jwt/jwt"
+
+type JWTClaim struct {
+	Username string
+	jwt.StandardClaims
+}
+
+type AuthResponse struct {
+	Token string `json:"token"`
+}
